# uwsgi-top

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  ui.rs  ui_detail.rs  ui_table.rs  uwsgi_reader.rs  uwsgi_struct.rs
test/: input.json
